reads json and gets propetytype from it

--- a/all/pom.xml
+++ b/all/pom.xml
@@ -109,18 +109,6 @@
                     <failOnError>true</failOnError>
                 </configuration>
             </plugin>
-            <plugin>
-                <artifactId>maven-clean-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>auto-clean</id>
-                        <phase>initialize</phase>
-                        <goals>
-                            <goal>clean</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
 
@@ -129,7 +117,7 @@
     <!-- ====================================================================== -->
     <profiles>
         <profile>
-            <id>autoInstallSinglePackage</id>
+            <id>autoInstallPackage</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
