--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,12 @@ Bundle-DocURL:
                             <artifactId>org.apache.sling.caconfig.bnd-plugin</artifactId>
                             <version>1.0.2</version>
                         </dependency>
+						<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-imaging -->
+						<dependency>
+						    <groupId>org.apache.commons</groupId>
+						    <artifactId>commons-imaging</artifactId>
+						    <version>1.0-R1534292</version>
+						</dependency>
                         <dependency>
                             <groupId>org.apache.sling</groupId>
                             <artifactId>org.apache.sling.bnd.models</artifactId>
